# train

./: Cargo.toml  README.md  new_train.blend1  track.json  track_script.py  train.blend  train.blend1  train.cedset  train.glb
src/: art.rs  cars.rs  gltf_to_cedset.rs  lib.rs  main.rs  render.rs
