[package]
name = "train"
version = "0.1.0"
authors = ["Cedric Hutchings <cedhut02@gmail.com>"]
edition = "2018"
default-run = "train"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "gltf-to-cedset"
path = "src/gltf_to_cedset.rs"
required-features = [ "gltf" ]

[[bin]]
name = "train"
path = "src/main.rs"

[dependencies]
miniquad = "=0.3.0-alpha.24"
glam = "0.11.2"
gltf = { optional = true, version = "0.15.2" }
